--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 		</div>
 		<h1>Возраст</h1>
 		<input type="text" class="dropbtn" id='AnimalAge'>
+		<a href="simptomes.html">
+			<input type="button" name="" class='dropbtn' value="Далее" style='text-align: center; margin-top: 20px;'>
+		</a>
 	</div>
 </body>
 </html>
