--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body>
 	<div class="header">
 		<p>WebHospital</p>
-		<ion-icon name="ellipsis-vertical"></ion-icon>
+		<ion-icon name="ellipsis-vertical" onclick='GoSomeSettings()' class='Settings'></ion-icon>
+		<div id="Settings" class="dropdown-content1">
+			<a href="#" onclick="Authors()">Авторы</a>
+		</div>
 	</div>
 	<div class="wrapper">
 		<h1>Тип животного</h1>
