--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/wrapper.css">
 	<link rel="stylesheet" type="text/css" href="css/dropdown.css">
 	<script type="text/javascript" src="js/dropdown.js"></script>
+	<script type="text/javascript" src="js/onpreload.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<title>WebHospital</title>
@@ -36,9 +37,7 @@
 		</div>
 		<h1>Возраст</h1>
 		<input type="text" class="dropbtn" id='AnimalAge'>
-		<a href="simptomes.html">
-			<input type="button" name="" class='dropbtn' value="Далее" style='text-align: center; margin-top: 20px;'>
-		</a>
+		<input type="button" name="" class='dropbtn' value="Далее" onclick="GoToSimptomes()" style='text-align: center; margin-top: 20px;'>
 	</div>
 </body>
 </html>
