Добавление\удаление симптомов

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<div class="header">
-		<p>WebHospital</p>
+		<a href="index.html">Карманная вет.клиника</a>
 		<ion-icon name="ellipsis-vertical" onclick='GoSomeSettings()' class='Settings'></ion-icon>
 		<div id="Settings" class="dropdown-content1">
 			<a href="#" onclick="Authors()">Авторы</a>
