--- a/simptomes.html
+++ b/simptomes.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="header">
-		<p>WebHospital</p>
+		<a href="index.html">WebHospital</a>
 		<span onclick='GoSomeSettings()'><ion-icon name="ellipsis-vertical" class='Settings'></ion-icon></span>
 		<div id="Settings" class="dropdown-content1">
 			<a href="#" onclick="Authors()">Авторы</a>
@@ -25,20 +25,14 @@
 	</div>
 	<div class="wrapper">
 		<input type="text" name="" class='simptomes_textarea' id='Simptomes_textarea'>
-		<div class="simptomes">
-			<div class="simptome" onclick="AddSimptome(1)">Гиперемия</div>
-			<div class="simptome" onclick="AddSimptome(2)">Кашель</div>
-			<div class="simptome" onclick="AddSimptome(3)">Чихание</div>
-			<div class="simptome" onclick="AddSimptome(4)">Светобоязнь</div>
-			<div class="simptome" onclick="AddSimptome(5)">Саливация</div>
-			<div class="simptome" onclick="AddSimptome(6)">Апатия</div>
-			<div class="simptome" onclick="AddSimptome(7)">Вялость</div>
-			<div class="simptome" onclick="AddSimptome(8)">Одышка</div>
-			<div class="simptome" onclick="AddSimptome(9)">Потеря аппетита</div>
-		</div>
+		<div class="simptomes" id='list_simptomes'>	</div>
 		<div style='display: none;' id='added_simptomes_id'></div>
 		<input type="button" name="" value="Добавленные симптомы" onclick="ShowPopup()" class="added_simptomes">
-		<div id='Added_simptomes_window'><ion-icon name="close-outline" class='button_for_close' onclick='ClosePopup()'></ion-icon><br><br>Здесь будут добавленные симптомы с возможностью их удаления, но я чет подзаебался, поэтому пук</div>
+		<div id='Added_simptomes_window'><ion-icon name="close-outline" class='button_for_close' onclick='ClosePopup()'></ion-icon>
+		<div style="position: absolute; margin:10px;font-size: 18pt;">Добавленные симптомы</div>
+			<div id='spisok_blyat'>
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="js/massiv.js"></script>
 	<script type="text/javascript" src="js/simptomes.js"></script>
