--- a/simptomes.html
+++ b/simptomes.html
@@ -16,6 +16,18 @@
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+	<div id='Added_simptomes_window'>
+		<ion-icon name="close-outline" class='button_for_close' onclick='ClosePopup()'></ion-icon>
+		<div style="position: absolute; margin:10px;font-size: 18pt;">Добавленные симптомы</div>
+		<div id='spisok_blyat'></div>
+	</div>
+	<div id='Info_window'>
+		<div class="header_for_info_window">
+			<div id='Info_header_name'>Бешенство</div>
+			<ion-icon name="close-outline" class='button_for_close' onclick='CloseInfoWindow()'></ion-icon>
+		</div>
+		<div id='info_text'>Бла бла бла</div>
+	</div>
 	<div class="header">
 		<a href="index.html" id='header_name'>Карманная вет.клиника</a>
 		<span onclick='GoSomeSettings()'><ion-icon name="ellipsis-vertical" class='Settings'></ion-icon></span>
@@ -28,22 +40,9 @@
 		<div class="simptomes" id='list_simptomes'>	</div>
 		<div style='display: none;' id='added_simptomes_id'></div>
 		<input type="button" name="" value="Добавленные симптомы" onclick="ShowPopup()" class="added_simptomes">
-		<div id='Added_simptomes_window'>
-			<ion-icon name="close-outline" class='button_for_close' onclick='ClosePopup()'></ion-icon>
-			<div style="position: absolute; margin:10px;font-size: 18pt;">Добавленные симптомы</div>
-			<div id='spisok_blyat'></div>
-		</div>
 
-		<div id='Info_window'>
-			<div class="header_for_info_window">
-				<div id='Info_header_name'>Бешенство</div>
-				<ion-icon name="close-outline" class='button_for_close' onclick='CloseInfoWindow()'></ion-icon>
-			</div>
-			<div id='info_text'>Бла бла бла</div>
-		</div>
-
-		<div class="block_with_list_bolezni">
-			<div style="position:absolute;background: #999999; top: 10px;width: 20%; height: 10px; left: 40%;border-radius: 20px;"></div>
+		<div id="block_with_list_bolezni">
+			<div style="position:absolute;background: #999999; top: 10px;width: 20%; height: 10px; left: 40%;border-radius: 20px;" id='button_for_close_open_bolezni' onclick="OpenBolezniList()"></div>
 
 			<div id='bolezni_list'>
 			</div>
