--- a/simptomes.html
+++ b/simptomes.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/wrapper.css">
 	<link rel="stylesheet" type="text/css" href="css/dropdown.css">
 	<link rel="stylesheet" type="text/css" href="css/simptomes.css">
+	<link rel="stylesheet" type="text/css" href="css/anketa.css">
 	<script type="text/javascript" src="js/dropdown.js"></script>
 	
 	<script type="text/javascript" src="js/onpreload.js"></script>
@@ -28,6 +29,36 @@
 		</div>
 		<div id='info_text'>Бла бла бла</div>
 	</div>
+
+	<div id="anketa">
+		<div class="anketa_header">
+			<div class="anketa_header_text">Карта пациента</div>
+			<ion-icon name="chevron-back-circle-outline" onclick='remove_anketa()'></ion-icon>
+		</div>
+		<div class="anketa_1line">
+			<input type="text" placeholder="ФИО Владельца">
+			<input style="width: 14%" type="text" name="" placeholder="ДД">
+			<span>/</span>
+			<input style="width: 40%" type="text" name="" placeholder="Месяц">
+			<span>/</span>
+			<input style="width: 20%" type="text" name="" placeholder="Год">
+		</div>
+		<div class="anketa_1line">
+			<input type="text" placeholder="Адрес проживания">
+		</div>
+		<div class="anketa_1line">
+			<input type="text" placeholder="Кличка">
+		</div>
+		<div class="anketa_1line">
+			<input type="text" placeholder="Возраст">
+			<input type="text" placeholder="Пол">
+			<input type="text" style="width: 200%;" placeholder="Порода">
+		</div>
+		<div class="anketa_1line">
+			<ion-icon name="save"></ion-icon>
+		</div>
+	</div>
+
 	<div class="header">
 		<a href="index.html" id='header_name'>Карманная вет.клиника</a>
 		<span onclick='GoSomeSettings()'><ion-icon name="ellipsis-vertical" class='Settings'></ion-icon></span>
@@ -41,8 +72,13 @@
 		<div style='display: none;' id='added_simptomes_id'></div>
 		<input type="button" name="" value="Добавленные симптомы" onclick="ShowPopup()" class="added_simptomes">
 
+		<div class='thirdzone'>
+			<ion-icon name="print-outline"></ion-icon>
+			<ion-icon name="reader-outline" onclick="show_anketa()" id='button_anketa'></ion-icon>
+		</div>
 		<div id="block_with_list_bolezni">
-			<div style="position:absolute;background: #999999; top: 10px;width: 20%; height: 10px; left: 40%;border-radius: 20px;" id='button_for_close_open_bolezni' onclick="OpenBolezniList()"></div>
+			<!-- <div class="gradient_for_bolezni"></div> -->
+			<div style="position:absolute;background: #999999; top: 10px;width: 20%; height: 10px; left: 40%;border-radius: 20px; z-index: 5;" id='button_for_close_open_bolezni' onclick="OpenBolezniList()"></div>
 
 			<div id='bolezni_list'>
 			</div>
@@ -51,6 +87,7 @@
 	</div>
 	<script type="text/javascript" src="js/massiv.js"></script>
 	<script type="text/javascript" src="js/simptomes.js"></script>
+	<script type="text/javascript" src="js/anketa.js"></script>
 	
 </body>
 </html>
