--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Создано чисто в информационных целях, мы всегда стоим за посещения врача!">
+	<meta property="og:title" content="Карманная вет. клиника">
+	<meta property="og:image" content="https://developer.mozilla.org/mdn-social-share.cd6c4a5a.png">
 	<!--
 	<script type="text/javascript" src='js/resize.js'></script>
 	<link rel="stylesheet" type="text/css" href="css/forresize.css"> 
