--- a/simptomes.html
+++ b/simptomes.html
@@ -15,8 +15,6 @@
 
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-	<script src="js/settings.js"></script>
-
 
 </head>
 <body>
@@ -41,8 +39,28 @@
 			<div class="Settings1line">
 				<input type="text" id="settings_hospital_site" placeholder="Сайт поликлиники">
 			</div>
+			<div class="Settings1line" style="display: flex;">
+				<input type="color" id="color1" style="color:var(--accent)">
+				<input type="color" id="color2" style="color:var(--accent2)">
+				<input type="color" id="color3" style="color:var(--accent3)">
+				<input type="color" id="color4" style="color:var(--accent4)">
+				<input type="color" id="color5" style="color:var(--accent5)">
+			</div>
+			<!--<div class="Settings1line">
+				<input type="color" id="color2" style="color:var(--accent2)" placeholder="--accent2">
+			</div>
+			<div class="Settings1line">
+				<input type="color" id="color3" style="color:var(--accent3)" placeholder="--accent3">
+			</div>
+			<div class="Settings1line">
+				<input type="color" id="color4" style="color:var(--accent4)" placeholder="--accent4">
+			</div>
+			<div class="Settings1line">
+				<input type="color" id="color5" style="color:var(--accent5)" placeholder="--accent5">
+			</div>-->
 			<div class="Settings1line">
 				<ion-icon name="save-outline" class="save" onclick="SaveSettings()"></ion-icon>
+				<ion-icon name="refresh-outline" class="save" style="left:4%;" onclick="RestartColor()"></ion-icon>
 			</div>
 		</div>
 
@@ -88,15 +106,6 @@
 			<input type="text" placeholder="Пол" id='anketa_sex'>
 			<input type="text" style="width: 200%;" placeholder="Порода" id='anketa_poroda'>
 		</div>
-		<div class="anketa_1line">
-			<input type="text" id='anketa_doctor' placeholder="ФИО врача">
-		</div>
-		<div class="anketa_1line">
-			<input type="text" id='anketa_hospital' placeholder="Название больницы">
-		</div>
-		<!-- <div class="anketa_1line">
-			<ion-icon name="save"></ion-icon>
-		</div> -->
 	</div>
 
 	<div class="header">
@@ -131,7 +140,8 @@
 	<script src='js/pdfmake.min.js'></script>
 	<script src='js/vfs_fonts.js'></script>
 	<script type="text/javascript" src="js/onpreload.js"></script>
-
+	<script type="text/javascript" src="js/tutor.js"></script>
+	<script src="js/settings.js"></script>
 	<script type="text/javascript" src="js/createpdf.js"></script>
 	
 </body>
