--- a/simptomes.html
+++ b/simptomes.html
@@ -133,6 +133,7 @@
 	<script type="text/javascript" src="js/massiv.js"></script>
 	<script type="text/javascript" src="js/simptomes.js"></script>
 	<script type="text/javascript" src="js/anketa.js"></script>
+	<!-- Аыаыаыа -->
 
 	<!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
